syntax = "proto3";

option go_package = "genproto/";

package protos;

import "google/protobuf/timestamp.proto";

service PartyService {
    rpc CreateParty(CreatePartyRequest) returns (PartyResponse) {}
    rpc GetPartyInfo(GetPartyInfoRequest) returns (PartyResponse) {}
    rpc UpdateParty(UpdatePartyRequest) returns (PartyResponse) {}
    rpc DeleteParty(DeletePartyRequest) returns (Voidd) {}
}

message CreatePartyRequest {
    string name = 1;
    string slogan = 2;
    google.protobuf.Timestamp opened_at = 3;
    string description = 4;
}

message GetPartyInfoRequest {
    string id = 1;
}

message UpdatePartyRequest {
    string id = 1;
}

message DeletePartyRequest {
    string id = 1;
}

message PartyResponse {
    string id = 1;
    string name = 2;
    string slogan = 3;
    google.protobuf.Timestamp opened_at = 4;
    string description = 5;
}

message Voidd {}
